# zz

./: .gitignore  Gemfile  README.md  install
chef/: config.rb  node.json
chef/android/recipes/: default.rb
chef/aws/recipes/: default.rb
chef/chrome/recipes/: default.rb
chef/chromedriver/recipes/: default.rb
chef/completion/recipes/: default.rb
chef/cryptomator/recipes/: default.rb
chef/dock/recipes/: default.rb
chef/docker/recipes/: default.rb
chef/drive/recipes/: default.rb
chef/dropbox/recipes/: default.rb
chef/elasticsearch/recipes/: default.rb
chef/ffmpeg/files/: transcode
chef/ffmpeg/recipes/: default.rb
chef/git/files/: git_branch  git_config
chef/git/recipes/: default.rb
chef/gitx/recipes/: default.rb
chef/govuk/recipes/: default.rb
chef/gpg/files/: gpg_config  gpg_reset  gpg_scdaemon  public_gpg_key
chef/gpg/recipes/: default.rb
chef/hello/recipes/: default.rb
chef/homebrew/recipes/: default.rb
chef/iterm/files/: com.googlecode.iterm2.plist  iterm_config
chef/iterm/recipes/: default.rb
lib/: zz.rb
lib/zz/: base.rb  exec.rb  help.rb  option.rb  path.rb  pref.rb  secret.rb
spec/: spec_helper.rb  zz_spec.rb
spec/zz/: base_spec.rb  exec_spec.rb  help_spec.rb  option_spec.rb  path_spec.rb  pref_spec.rb  secret_spec.rb
templates/cpp/: .gitignore  Makefile  README.md  __setup.sh
templates/ruby/: Gemfile  LICENSE  __setup.sh
templates/rust/: Cargo.toml  LICENSE  README.md  __setup.sh
templates/rust/benches/: {name}_bench.rs
templates/rust/src/base/: mod.rs  test.rs
templates/rust/tests/: {name}_test.rs
(+72 files in other folders)
